Fix disappearing scrollbar

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -15,9 +15,11 @@
 }
 
 .stop-scrolling {
-  width: 100%;
-  height: 100%;
   overflow: hidden;
+}
+
+.show-scrollbar {
+  overflow-y: scroll;
 }
 
 .modal-confirm-dark-overlay {
